# plugin_bd_topo_extractor

./: CHANGELOG.md  CONTRIBUTING.md  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  config.yml
.github/workflows/: documentation.yml  linter.yml  packager.yml  releaser.yml  tester.yml
bd_topo_extractor/: README.md  README_fr.md  __about__.py  __init__.py  metadata.txt  plugin_main.py
bd_topo_extractor/gui/: dlg_main.py  dlg_settings.py  dlg_settings.ui
bd_topo_extractor/processing/: __init__.py  getcapabilities_request.py  provider.py  rectangle_tool.py  wfs_request.py
bd_topo_extractor/resources/help/: index.html
bd_topo_extractor/resources/i18n/: bd_topo_extractor_en.ts  bd_topo_extractor_fr.ts  plugin_translation.pro
bd_topo_extractor/resources/styles/: AERODROME.qml  ARRONDISSEMENT.qml  ARRONDISSEMENT_MUNICIPAL.qml  BASSIN_VERSANT_TOPOGRAPHIQUE.qml  BATIMENT.qml  CANALISATION.qml  CIMETIERE.qml  COLLECTIVITE_TERRITORIALE.qml  COMMUNE.qml  COMMUNE_ASSOCIEE_OU_DELEGUEE.qml  CONDOMINIUM.qml  CONSTRUCTION_LINEAIRE.qml  CONSTRUCTION_PONCTUELLE.qml  CONSTRUCTION_SURFACIQUE.qml  COURS_D_EAU.qml  DEPARTEMENT.qml  DETAIL_HYDROGRAPHIQUE.qml  EPCI.qml  (+36 more)
bd_topo_extractor/toolbelt/: __init__.py  log_handler.py  preferences.py  result_log.py
docs/: conf.py  index.md
docs/development/: documentation.md  environment.md  extraction_tool.md  packaging.md  roadmap.md  testing.md  translation.md
docs/usage/: installation.md
requirements/: development.txt  documentation.txt
tests/qgis/: test_plg_preferences.py
tests/unit/: test_plg_metadata.py
